<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/futurama_background"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/futurama"
        android:layout_width="247dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/futurama_main_menu" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/start_game"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/futurama" />

    <Button
        android:id="@+id/library"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/library"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGame" />

    <Button
        android:id="@+id/settings"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/settings"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/library" />

    <Button
        android:id="@+id/about"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/about"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <Button
        android:id="@+id/quit"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:onClick="onQuit"
        android:text="@string/quit"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about" />
</androidx.constraintlayout.widget.ConstraintLayout>