<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="297dp"
    android:background="@color/red"
    android:columnCount="2"
    android:rowCount="4"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        android:text="@string/brightness"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/brightnessBar"
        android:layout_width="217dp"
        android:layout_height="90dp"
        android:layout_row="0"
        android:layout_column="1"
        android:outlineSpotShadowColor="@color/yellow"
        android:scrollbarSize="18sp" />

    <TextView
        android:id="@+id/sound"
        android:text="@string/sound"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_vertical"/>

    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:outlineSpotShadowColor="@color/yellow"
        android:scrollbarSize="18sp" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        android:text="@string/volume"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/volumeBar"
        android:layout_width="217dp"
        android:layout_height="90dp"
        android:layout_row="2"
        android:layout_column="1"
        android:outlineSpotShadowColor="@color/yellow"
        android:scrollbarSize="18sp"
        />

    <TextView
        android:id="@+id/language"
        android:text="@string/language"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"/>

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="217dp"
        android:layout_height="90dp"
        android:layout_row="3"
        android:layout_column="1"
        android:entries="@array/languages"/>


</GridLayout>